improving code and code coverage